<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_editor_layout"
            android:layout_marginStart="@dimen/margin_editor_layout"
            android:orientation="vertical">

            <TextView
                style="@style/editor_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview" />

            <LinearLayout
                style="@style/group_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".EditorProductActivity">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:textColorHint="@color/colorPrimary">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/product_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/product_name_hint" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_price"
                        android:layout_width="@dimen/zero"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:paddingEnd="@dimen/padding_price"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                        android:textColorHint="@color/colorPrimary">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/price_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/price_hint"
                            android:inputType="numberDecimal" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        style="@style/button_plus_minus"
                        android:id="@+id/minus_button"
                        android:layout_width="@dimen/button_plus_minus_size"
                        android:layout_height="@dimen/button_plus_minus_size"
                        android:drawableStart="@drawable/ic_remove_black" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_quantity"
                        android:layout_width="@dimen/zero"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                        android:textColorHint="@color/colorPrimary">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/quantity_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:hint="@string/quantity_hint"
                            android:inputType="number" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        style="@style/button_plus_minus"
                        android:id="@+id/plus_button"
                        android:layout_width="@dimen/button_plus_minus_size"
                        android:layout_height="@dimen/button_plus_minus_size"
                        android:drawableStart="@drawable/ic_add_black" />

                </LinearLayout>


            </LinearLayout>

            <TextView
                style="@style/editor_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_details" />

            <LinearLayout
                style="@style/group_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_supplier_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                        android:textColorHint="@color/colorPrimary">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/supplier_name_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/supplier_name_hint" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_supplier_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                        android:textColorHint="@color/colorPrimary">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/supplier_phone_number_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/supplier_phone_number_hint"
                            android:inputType="phone" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/contact_supplier_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:text="@string/contact_supplier"
                android:layout_marginTop="@dimen/button_marginTop"
                android:background="@drawable/button_effect"
                android:paddingStart="@dimen/button_padding_start"
                android:paddingEnd="@dimen/button_padding_end"
                android:drawableStart="@drawable/ic_call"
                android:drawablePadding="@dimen/button_drawable_padding"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </ScrollView>

</layout>